<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup">

    <EditText
        android:id="@+id/signEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:height="50dp"
        android:textSize="20dp"

        />

    <EditText
        android:id="@+id/signPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:height="50dp"
        android:textSize="20dp"
        />

    <Button
        android:id="@+id/signbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signin" />

    <Button
        android:id="@+id/signbtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signup" />

</LinearLayout>